complete BST implementation